--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -3,7 +3,8 @@ h1 Listing Categories
 
 = link_to 'add category', new_category_path
 
-table class= "tabletable-hover" 
+
+table.table.table-condensed
   tr
     th Title
 
@@ -14,3 +15,5 @@ table class= "tabletable-hover"
     tr
       td= category.name
       td= category.categorytype
+      td= link_to 'Edit', edit_category_path(category)
+      td= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure?' }
