--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -1,19 +1,25 @@
 
 h1 Listing Categories
 
-= link_to 'add category', new_category_path
+= link_to 'add category', new_category_path, class: "btn btn-primary"
 
+.container-fluid
+  .row
+    .col-md-2
+    .col-md-6
 
-table.table.table-condensed
-  tr
-    th Title
+      table.table.table-hover
+        tr
+          th Title
 
-    th Text
-  
- 
-  - @categories.each do |category|
-    tr
-      td= category.name
-      td= category.categorytype
-      td= link_to 'Edit', edit_category_path(category)
-      td= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure?' }
+          th Text
+        
+        = paginate @categories 
+        - @categories.each_with_index do |category, index|
+          tr
+            td= index+1
+            td= category.name
+            td= category.categorytype
+            td= link_to 'Edit', edit_category_path(category), class: "btn btn-success"
+            td= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-warning"
+    
