--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,66 +1,28 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-    <div class="container topnav">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#services">Services</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-
-                <% if user_signed_in? %>
-                    <li>
-                    <%= link_to('Edit registration', edit_user_registration_path) %>
-                    </li>
-                <% else %>  
-                    <li>
-                    <%= link_to('Register', new_user_registration_path)  %>
-                    </li>
-                <% end %>
-                
-                <% if user_signed_in? %>
-                
-                     <li>
-                    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-                    </li>
-                <% else %>
-                    <li>
-                    <%= link_to('Login', new_user_session_path)  %>  
-                    </li>
-                <% end %>
-
-                
-
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
-
 <!-- Header -->
 <a name="about"></a>
 <div class="intro-header">
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12">
+            
+            <div class="col-md-2">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> Categories
+                <span class="caret"></span>
+                </button>
+
+                <ul class="dropdown-menu">
+                    <li>
+                        <%= link_to 'add category', new_category_path  %>     
+                    </li>
+                    <li>
+                        <%= link_to 'List Categories', categories_path %>     
+                    </li>
+                </ul>
+            
+            </div>
+
+            <div class="col-md-6">
                 <div class="intro-message">
                     <h1>Landing Page</h1>
                     <h3>A Template by Start Bootstrap</h3>
