--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -10,16 +10,22 @@ h1 Listing Categories
 
       table.table.table-hover
         tr
-          th Title
+          th Sr No.
+          th Category type
+          th Name
+          th Edit
+          th delete
 
-          th Text
         
         = paginate @categories 
         - @categories.each_with_index do |category, index|
-          tr
+          tr.success
+
             td= index+1
             td= category.name
             td= category.categorytype
             td= link_to 'Edit', edit_category_path(category), class: "btn btn-success"
             td= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-warning"
-    
+
+
+= link_to 'Back', root_path, class: "btn btn-primary"    
