--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -7,18 +7,36 @@
         <div class="row">
             
             <div class="col-md-2">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> Categories
-                <span class="caret"></span>
-                </button>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> Categories
+                        <span class="caret"></span>
+                    </button>
 
-                <ul class="dropdown-menu">
-                    <li>
-                        <%= link_to 'add category', new_category_path  %>     
-                    </li>
-                    <li>
-                        <%= link_to 'List Categories', categories_path %>     
-                    </li>
-                </ul>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <%= link_to 'add category', new_category_path  %>     
+                        </li>
+                        <li>
+                            <%= link_to 'List Categories', categories_path %>     
+                        </li>
+                    </ul>
+                 </div>
+                <br>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> Plots
+                        <span class="caret"></span>
+                    </button>
+
+                    <ul class="dropdown-menu">
+                        <li>
+                            <%= link_to 'add plot', new_plot_path  %>     
+                        </li>
+                        <li>
+                            <%= link_to 'List plots', plots_path %>     
+                        </li>
+                    </ul>
+            
+                </div>
             
             </div>
 
