--- a/app/views/allottees/_allottees_data.slim
+++ b/app/views/allottees/_allottees_data.slim
@@ -22,6 +22,7 @@
         td = a.registration_date
         td = a.status
         td = a.name_of_kin
+      /  td = link_to charges_path(plot_id: plot.id)
 - else
   | No record found      
  
